--- a/front/src/entities/roleSelector/ui/RoleSelector.module.scss
+++ b/front/src/entities/roleSelector/ui/RoleSelector.module.scss
@@ -81,10 +81,12 @@ border-radius: 25px;
     position: absolute;
     top: 0;
     right: 0;
+    z-index: -1;
 }
 
 .imgBottom {
     position: absolute;
     bottom: -100px;
     left: 0;
+    z-index: -1;
 }
