--- a/front/src/widgets/header/ui/Header.module.scss
+++ b/front/src/widgets/header/ui/Header.module.scss
@@ -52,35 +52,7 @@
 }
 
 
-.account {
-    font-family: var(--font-comfortaa);
-    display: flex;
-    gap:16px;
-    align-items: center;
+.accountHolder {
+    min-width: 300px;
 }
 
-.signIn {
-    display: flex;
-    align-items: center;
-    gap:3px;
-    padding: 7px 16px;
-    font-size: 20px;
-    line-height: 24px;
-    font-weight: 600;
-    border-radius: 25px;
-    border: 1px solid white;
-    color: #F5F5F5;
-
-    &:hover {
-        background-color: #D9D9D9;
-        color:black
-    }
-
-}
-
-.signUp {
-    font-size: 20px;
-    line-height: 24px;
-    font-weight: 600;
-    border-bottom: 1px solid white;
-}
