--- a/front/src/widgets/header/ui/components/account/Account.module.scss
+++ b/front/src/widgets/header/ui/components/account/Account.module.scss
@@ -49,6 +49,13 @@
     gap: 10px;
 }
 
+.profile {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 8px;
+}
+
 .username {
     font-size: 12px;
     text-align: center;
