--- a/front/src/widgets/publications/ui/AddPublication.module.scss
+++ b/front/src/widgets/publications/ui/AddPublication.module.scss
@@ -58,3 +58,11 @@
         font-weight: 600;
     }
 }
+
+.cardsHolder {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-auto-rows: max-content;
+    column-gap: 25px;
+    row-gap: 55px;
+}
