--- a/front/src/widgets/addPublication/ui/components/checkingAccount/CheckingAccount.module.scss
+++ b/front/src/widgets/addPublication/ui/components/checkingAccount/CheckingAccount.module.scss
@@ -14,3 +14,14 @@
     justify-content: flex-end;
     align-items: center;
 }
+
+
+.inputHolder {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+.error {
+    font-size: 12px;
+    color: red;
+}
