--- a/front/src/widgets/projects/ui/Projects.module.scss
+++ b/front/src/widgets/projects/ui/Projects.module.scss
@@ -7,6 +7,7 @@
     width: 100%;
     padding-bottom: 60px;
     overflow: hidden;
+
 }
 
 
@@ -64,12 +65,14 @@
 .cardsHolder {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(3, 1fr);
-    gap: 56px;
+    grid-auto-rows: max-content;
+    column-gap: 25px;
+    row-gap: 55px;
     margin-top: 36px;
     margin-left: 47px;
     grid-column: 2;
     grid-row: 3;
+    width: 950px;
 }
 
 
@@ -185,13 +188,5 @@ right: 18px;
     align-items: center;
 }
 
-.image {
-    position: absolute;
-    left: 0;
-    bottom: -100px;
-    height: 800px;
-    width: auto;
-    z-index: -1;
 
-}
 
