--- a/front/src/widgets/publications/ui/AddPublication.module.scss
+++ b/front/src/widgets/publications/ui/AddPublication.module.scss
@@ -2,6 +2,7 @@
 
 .root {
     width: 100%;
+    padding-bottom: 80px;
 }
 
 
@@ -24,9 +25,9 @@
 .publications {
     padding: 36px;
     margin-top: 44px;
-    background-color: #D9D9D9;
+    border: 1px solid #CCCCCC;
     width: 100%;
-    height: 340px;
+    min-height: 340px;
     border-radius: 40px;
 }
 
@@ -60,6 +61,7 @@
 }
 
 .cardsHolder {
+    margin-top: 40px;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-auto-rows: max-content;
